--- a/BlazesCPPCLRGlobalCode/BlazesCPPCLRGlobalCode.vcxproj.filters
+++ b/BlazesCPPCLRGlobalCode/BlazesCPPCLRGlobalCode.vcxproj.filters
@@ -16,6 +16,12 @@
     <Filter Include="Header Files\GlobalCode_ExperimentalCode">
       <UniqueIdentifier>{9d439afa-83b0-406f-9a85-f4849f86776d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\GlobalCode_VariableLists">
+      <UniqueIdentifier>{4fc75eeb-e54b-40ba-870d-a5ae978b9448}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\GlobalCode_NodeTrees">
+      <UniqueIdentifier>{02ec63fa-d3ae-4170-aec9-4d2298797644}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BlazesCPPCLRGlobalCode.h">
@@ -42,6 +48,36 @@
     <ClInclude Include="..\GlobalCode\GlobalCode_ExperimentalCode\MediumDec.h">
       <Filter>Header Files\GlobalCode_ExperimentalCode</Filter>
     </ClInclude>
+    <ClInclude Include="..\GlobalCode\GlobalCode_VariableLists\StringVectorList.h">
+      <Filter>Header Files\GlobalCode_VariableLists</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode\GlobalCode_VariableLists\VariableList.h">
+      <Filter>Header Files\GlobalCode_VariableLists</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode\GlobalCode_VariableLists\VariableTypeLists.h">
+      <Filter>Header Files\GlobalCode_VariableLists</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode\GlobalCode_VariableLists\VariableVectorFunctions.h">
+      <Filter>Header Files\GlobalCode_VariableLists</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode\GlobalCode_NodeTrees\LooseNodeTreeTemplate.h">
+      <Filter>Header Files\GlobalCode_NodeTrees</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode\GlobalCode_NodeTrees\TagNodeTreeTemplate.h">
+      <Filter>Header Files\GlobalCode_NodeTrees</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode\GlobalCode_NodeTrees\TagPosition.h">
+      <Filter>Header Files\GlobalCode_NodeTrees</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode\GlobalCode_NodeTrees\VariableData.h">
+      <Filter>Header Files\GlobalCode_NodeTrees</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode\GlobalCode_NodeTrees\XMLOption.h">
+      <Filter>Header Files\GlobalCode_NodeTrees</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode\GlobalCode_NodeTrees\XMLTagTree.h">
+      <Filter>Header Files\GlobalCode_NodeTrees</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BlazesCPPCLRGlobalCode.cpp">
@@ -58,6 +94,27 @@
     </ClCompile>
     <ClCompile Include="..\GlobalCode\GlobalCode_ExperimentalCode\MediumDec.cpp">
       <Filter>Header Files\GlobalCode_ExperimentalCode</Filter>
+    </ClCompile>
+    <ClCompile Include="..\GlobalCode\GlobalCode_VariableLists\StringVectorList.cpp">
+      <Filter>Header Files\GlobalCode_VariableLists</Filter>
+    </ClCompile>
+    <ClCompile Include="..\GlobalCode\GlobalCode_VariableLists\VariableTypeLists.cpp">
+      <Filter>Header Files\GlobalCode_VariableLists</Filter>
+    </ClCompile>
+    <ClCompile Include="..\GlobalCode\GlobalCode_VariableLists\VariableVectorFunctions.cpp">
+      <Filter>Header Files\GlobalCode_VariableLists</Filter>
+    </ClCompile>
+    <ClCompile Include="..\GlobalCode\GlobalCode_NodeTrees\TagNodeTreeTemplate.cpp">
+      <Filter>Header Files\GlobalCode_NodeTrees</Filter>
+    </ClCompile>
+    <ClCompile Include="..\GlobalCode\GlobalCode_NodeTrees\TagPosition.cpp">
+      <Filter>Header Files\GlobalCode_NodeTrees</Filter>
+    </ClCompile>
+    <ClCompile Include="..\GlobalCode\GlobalCode_NodeTrees\VariableData.cpp">
+      <Filter>Header Files\GlobalCode_NodeTrees</Filter>
+    </ClCompile>
+    <ClCompile Include="..\GlobalCode\GlobalCode_NodeTrees\XMLOption.cpp">
+      <Filter>Header Files\GlobalCode_NodeTrees</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
