--- a/BlazesCSharpGlobalCode/BlazesCSharpGlobalCode.csproj
+++ b/BlazesCSharpGlobalCode/BlazesCSharpGlobalCode.csproj
@@ -138,8 +138,11 @@
     <Compile Include="GlobalCode_ExperimentalCode\ValidationOverride.cs" />
     <Compile Include="GlobalCode_ExperimentalCode\VariableData.cs" />
     <Compile Include="GlobalCode_IniData\IniData.cs" />
+    <Compile Include="GlobalCode_NodeTrees\HavokActionTree.cs" />
+    <None Include="GlobalCode_NodeTrees\HavokTagTree.cs" />
     <Compile Include="GlobalCode_NodeTrees\LooseNodeTreeTemplate.cs" />
-    <Compile Include="GlobalCode_NodeTrees\TagNodeTree.cs" />
+    <Compile Include="GlobalCode_NodeTrees\NifNodeTree.cs" />
+    <Compile Include="GlobalCode_NodeTrees\NodeTree.cs" />
     <Compile Include="GlobalCode_NodeTrees\TagPosition.cs" />
     <Compile Include="GlobalCode_NodeTrees\VariableData.cs" />
     <Compile Include="GlobalCode_NodeTrees\XMLNodeTreeV2.cs" />
@@ -148,6 +151,7 @@
     <Compile Include="GlobalCode_StringFunctions\StringFunctions.cs" />
     <Compile Include="GlobalCode_VariableConversionFunctions\TypeDataInfo.cs" />
     <Compile Include="GlobalCode_VariableConversionFunctions\VariableConversionFunctions.cs" />
+    <Compile Include="GlobalCode_VariableLists\QuadList.cs" />
     <Compile Include="GlobalCode_VariableLists\StringList.cs" />
     <Compile Include="GlobalCode_VariableLists\XIntegerList.cs" />
     <Compile Include="GlobalMiscCode\FileAccessCommands.cs" />
