--- a/BlazesCPPCLRGlobalCode/BlazesCPPCLRGlobalCode.vcxproj.filters
+++ b/BlazesCPPCLRGlobalCode/BlazesCPPCLRGlobalCode.vcxproj.filters
@@ -75,6 +75,15 @@
     <ClInclude Include="..\GlobalCode\GlobalCode_NodeTrees\XMLTagTree.h">
       <Filter>Header Files\GlobalCode_NodeTrees</Filter>
     </ClInclude>
+    <ClInclude Include="..\GlobalCode\GlobalCode_ExperimentalCode\BufferedVariable.h">
+      <Filter>Header Files\GlobalCode_ExperimentalCode</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode\GlobalCode_ExperimentalCode\BufferedVariableArray.h">
+      <Filter>Header Files\GlobalCode_ExperimentalCode</Filter>
+    </ClInclude>
+    <ClInclude Include="..\GlobalCode\GlobalCode_ExperimentalCode\CustomDec.h">
+      <Filter>Header Files\GlobalCode_ExperimentalCode</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BlazesCPPCLRGlobalCode.cpp">
