Ported most of MediumDec over to C++ now and fixed some errors missed from when used SmallDec as base for MediumDec code etc
-Removed the individual VC++ projects (will add preprocessor switches to other files later for if want to exclude files from  different folders etc)

--- a/BlazesCPPCLRGlobalCode/BlazesCPPCLRGlobalCode.vcxproj
+++ b/BlazesCPPCLRGlobalCode/BlazesCPPCLRGlobalCode.vcxproj
@@ -140,12 +140,23 @@
     <ClInclude Include="..\GlobalCode\GlobalCode_ExperimentalCode\MediumDec.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_ExperimentalCode\SuperDecHex.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_ExperimentalCode\VariableListV2.h" />
+    <ClInclude Include="..\GlobalCode\GlobalCode_IniData\CustomDictionary.h" />
+    <ClInclude Include="..\GlobalCode\GlobalCode_IniData\CustomOrderedDictionary.h" />
+    <ClInclude Include="..\GlobalCode\GlobalCode_IniData\DictionaryList.h" />
+    <ClInclude Include="..\GlobalCode\GlobalCode_IniData\IndexedDictionary.h" />
+    <ClInclude Include="..\GlobalCode\GlobalCode_IniData\IniData.h" />
+    <ClInclude Include="..\GlobalCode\GlobalCode_IniData\IniDataV2.h" />
+    <ClInclude Include="..\GlobalCode\GlobalCode_MiscFunctions\MiscFunctions.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_NodeTrees\LooseNodeTreeTemplate.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_NodeTrees\TagNodeTreeTemplate.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_NodeTrees\TagPosition.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_NodeTrees\VariableData.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_NodeTrees\XMLOption.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_NodeTrees\XMLTagTree.h" />
+    <ClInclude Include="..\GlobalCode\GlobalCode_QuadVector\QuadVector.h" />
+    <ClInclude Include="..\GlobalCode\GlobalCode_QuadVector\QuadVectorFunctions.h" />
+    <ClInclude Include="..\GlobalCode\GlobalCode_StringFunctions\StringFunctions.h" />
+    <ClInclude Include="..\GlobalCode\GlobalCode_VariableConversionFunctions\VariableConversionFunctions.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_VariableLists\StringVectorList.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_VariableLists\VariableList.h" />
     <ClInclude Include="..\GlobalCode\GlobalCode_VariableLists\VariableTypeLists.h" />
@@ -157,10 +168,17 @@
   <ItemGroup>
     <ClCompile Include="..\GlobalCode\GlobalCode_ExperimentalCode\MediumDec.cpp" />
     <ClCompile Include="..\GlobalCode\GlobalCode_ExperimentalCode\SuperDecHex.cpp" />
+    <ClCompile Include="..\GlobalCode\GlobalCode_IniData\IniData.cpp" />
+    <ClCompile Include="..\GlobalCode\GlobalCode_IniData\IniDataV2.cpp" />
+    <ClCompile Include="..\GlobalCode\GlobalCode_MiscFunctions\MiscFunctions.cpp" />
     <ClCompile Include="..\GlobalCode\GlobalCode_NodeTrees\TagNodeTreeTemplate.cpp" />
     <ClCompile Include="..\GlobalCode\GlobalCode_NodeTrees\TagPosition.cpp" />
     <ClCompile Include="..\GlobalCode\GlobalCode_NodeTrees\VariableData.cpp" />
     <ClCompile Include="..\GlobalCode\GlobalCode_NodeTrees\XMLOption.cpp" />
+    <ClCompile Include="..\GlobalCode\GlobalCode_QuadVector\QuadVector.cpp" />
+    <ClCompile Include="..\GlobalCode\GlobalCode_QuadVector\QuadVectorFunctions.cpp" />
+    <ClCompile Include="..\GlobalCode\GlobalCode_StringFunctions\StringFunctions.cpp" />
+    <ClCompile Include="..\GlobalCode\GlobalCode_VariableConversionFunctions\VariableConversionFunctions.cpp" />
     <ClCompile Include="..\GlobalCode\GlobalCode_VariableLists\StringVectorList.cpp" />
     <ClCompile Include="..\GlobalCode\GlobalCode_VariableLists\VariableTypeLists.cpp" />
     <ClCompile Include="..\GlobalCode\GlobalCode_VariableLists\VariableVectorFunctions.cpp" />
