changed header guard name and duplicated BasedTemplate as base for paged Multiview Template (that plan to use in BhvEditor)

--- a/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj
+++ b/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj
@@ -411,6 +411,7 @@
     <ResourceCompile Include="MultiView.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="HalfPagedMultiview.h" />
     <ClInclude Include="MainFrm.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </ExcludedFromBuild>
