--- a/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
+++ b/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
@@ -161,6 +161,9 @@
     <ClInclude Include="AboutDlg.h">
       <Filter>MultiView</Filter>
     </ClInclude>
+    <ClInclude Include="HalfPagedMultiview.h">
+      <Filter>MultiView</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\MultiView.ico">
