--- a/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
+++ b/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="FusedFrameWindow.cpp">
       <Filter>MultiView</Filter>
     </ClCompile>
+    <ClCompile Include="TreePage.cpp">
+      <Filter>MultiView</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resource.h">
@@ -162,6 +165,18 @@
       <Filter>MultiView</Filter>
     </ClInclude>
     <ClInclude Include="HalfPagedMultiview.h">
+      <Filter>MultiView</Filter>
+    </ClInclude>
+    <ClInclude Include="CustomTreeNode.h">
+      <Filter>MultiView</Filter>
+    </ClInclude>
+    <ClInclude Include="TreePage.h">
+      <Filter>MultiView</Filter>
+    </ClInclude>
+    <ClInclude Include="CustomTreeCtrl.h">
+      <Filter>MultiView</Filter>
+    </ClInclude>
+    <ClInclude Include="CustomTreeView.h">
       <Filter>MultiView</Filter>
     </ClInclude>
   </ItemGroup>
