--- a/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj
+++ b/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj
@@ -317,7 +317,8 @@
     <ClCompile Include="$(CPPSource)\GlobalCode_VariableLists\VariableVectorFunctions.cpp">
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="TreePage.cpp" />
+    <ClCompile Include="CustomTreeView.cpp" />
+    <ClCompile Include="TreeCtrlPage.cpp" />
     <ClInclude Include="$(CPPSource)\tsl\ordered_hash.h" />
     <ClInclude Include="$(CPPSource)\tsl\ordered_map.h" />
     <ClInclude Include="$(CPPSource)\tsl\ordered_set.h" />
@@ -343,7 +344,7 @@
     <ClInclude Include="$(CPPSource)\GlobalCode_ExperimentalCode\MediumDec.h" />
     <ClInclude Include="CustomTreeCtrl.h" />
     <ClInclude Include="CustomTreeView.h" />
-    <ClInclude Include="TreePage.h" />
+    <ClInclude Include="TreeCtrlPage.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\MultiPlatformGlobalCode\GlobalCode\DLLAPI.h" />
