--- a/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
+++ b/GlobalCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
@@ -66,7 +66,10 @@
     <ClCompile Include="FusedFrameWindow.cpp">
       <Filter>MultiView</Filter>
     </ClCompile>
-    <ClCompile Include="TreePage.cpp">
+    <ClCompile Include="TreeCtrlPage.cpp">
+      <Filter>MultiView</Filter>
+    </ClCompile>
+    <ClCompile Include="CustomTreeView.cpp">
       <Filter>MultiView</Filter>
     </ClCompile>
   </ItemGroup>
@@ -170,10 +173,10 @@
     <ClInclude Include="CustomTreeNode.h">
       <Filter>MultiView</Filter>
     </ClInclude>
-    <ClInclude Include="TreePage.h">
+    <ClInclude Include="CustomTreeCtrl.h">
       <Filter>MultiView</Filter>
     </ClInclude>
-    <ClInclude Include="CustomTreeCtrl.h">
+    <ClInclude Include="TreeCtrlPage.h">
       <Filter>MultiView</Filter>
     </ClInclude>
     <ClInclude Include="CustomTreeView.h">
